--- a/css/main.css
+++ b/css/main.css
@@ -11,9 +11,12 @@ body {
   font-size: 18px;
   color: #404040;
   position: relative;
-  background-color: {{ site.page-col }};
+  background: #FFF;
+  {% if site.page-col %}
+  background: {{ site.page-col }};
+  {% endif %}
   {% if site.page-img %}
-  background-image: url({{ site.page-img | relative_url }});
+  background-image: url({{ site.page-img }});
   background-attachment: fixed;
   {% endif %}
 }
@@ -21,16 +24,20 @@ p {
   line-height: 1.5;
   margin: 30px 0;
 }
+p a {
+  /* text-decoration: underline */
+  color: #008AFF;
+}
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 800;
 }
 a {
-  color: {{ site.link-col }};
+  color: #008AFF;
 }
 a:hover,
 a:focus {
-  color: {{ site.hover-col }};
+  color: #890000;
 }
 blockquote {
   color: #808080;
@@ -68,12 +75,12 @@ hr.small {
 ::-moz-selection {
   color: white;
   text-shadow: none;
-  background-color: {{ site.hover-col }};
+  background: #890000;
 }
 ::selection {
   color: white;
   text-shadow: none;
-  background-color: {{ site.hover-col }};
+  background: #890000;
 }
 img::selection {
   color: white;
@@ -98,19 +105,17 @@ img {
   }
 }
 
-.linked-section {
-  padding-top: 60px;
-  margin-top: -25px;
-}
-
 /* --- Navbar --- */
 
 .navbar-custom {
-  background-color: {{ site.navbar-col }};
+  background: #F5F5F5;
   border-bottom: 1px solid #EAEAEA;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  {% if site.navbar-col %}
+  background: {{ site.navbar-col }};
+  {% endif %}
   {% if site.navbar-img %}
-  background-image: url({{ site.navbar-img | relative_url }});
+  background-image: url({{ site.navbar-img }});
   background-attachment: fixed;
   {% endif %}
 }
@@ -124,14 +129,14 @@ img {
 .navbar-custom .navbar-brand,
 .navbar-custom .nav li a {
   font-weight: 800;
-  color: {{ site.navbar-text-col }};
+  color: #404040;
 }
 
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus ,
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus {
-  color: {{ site.hover-col }};
+  color: #890000;
 }
 
 .navbar-custom .navbar-brand-logo {
@@ -203,7 +208,7 @@ img {
     -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
     -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
   }
-
+  
   .navbar-custom .avatar-container  .avatar-img {
     width: 100%;
   }
@@ -225,7 +230,7 @@ img {
   display: block;
   padding: 10px;
   padding-left: 30px;
-  background-color: {{ site.navbar-children-col }};
+  background: #f5f5f5;
   text-decoration: none !important;
   border-width: 0 1px 1px 1px;
   font-weight: normal;
@@ -243,7 +248,7 @@ img {
     text-align: center;
   }
   .navbar-custom .nav .navlinks-container:hover {
-    background: rgba(0, 0, 0, 0.1);
+    background: rgba(0, 0, 0, 0.2);
   }
   .navbar-custom .nav .navlinks-container:hover .navlinks-children {
     display: block;
@@ -262,22 +267,21 @@ img {
 
 footer {
   padding: 30px 0;
+  background: #F5F5F5;
   border-top: 1px #EAEAEA solid;
   margin-top: 50px;
   font-size: 14px;
-  background-color: {{ site.footer-col }};
+  {% if site.footer-col %}
+  background: {{ site.footer-col }};
+  {% endif %}
   {% if site.footer-img %}
-  background-image: url({{ site.footer-img | relative_url }});
+  background-image: url({{ site.footer-img }});
   background-attachment: fixed;
   {% endif %}
 }
 
-footer p.text-muted {
-  color: {{ site.footer-text-col }};
-}
-
 footer a {
-  color: {{site.footer-link-col}};
+  color: #404040;
 }
 
 footer .list-inline {
@@ -331,7 +335,7 @@ footer .theme-by {
 .post-preview a:focus,
 .post-preview a:hover {
   text-decoration: none;
-  color: {{ site.hover-col }};
+  color: #890000;
 }
 
 .post-preview .post-title {
@@ -364,7 +368,7 @@ footer .theme-by {
   float: right;
   height: 192px;
   width: 192px;
-  margin-top: -35px;
+  margin-top: -13px;
   filter: grayscale(90%);
 }
 .post-image:hover {
@@ -395,14 +399,14 @@ footer .theme-by {
 }
 
 .blog-tags a {
-  color: {{ site.link-col }};
+  color: #008AFF;
   text-decoration: none;
   padding: 0px 5px;
 }
 
 .blog-tags a:hover {
   border-radius: 2px;
-  color: {{ site.hover-col }};
+  color: #008AFF;
   background-color: #EEE;
 }
 
@@ -422,7 +426,6 @@ footer .theme-by {
     height: 100px;
     width: 100px;
   }
-
   .post-image {
     width: 100%;
     text-align: center;
@@ -443,7 +446,7 @@ footer .theme-by {
   background-size: cover;
   -o-background-size: cover;
   margin-top: 51px; /* The small navbar is 50px tall + 1px border */
-  margin-bottom: 5px;
+  margin-bottom: 35px;
 }
 .intro-header.big-img  .big-img-transition {
   position: absolute;
@@ -535,7 +538,7 @@ footer .theme-by {
 
 .header-section.has-img .no-img {
   margin-top: 0;
-  background-color: #FCFCFC;
+  background: #FCFCFC;
   margin: 0 0 40px;
   padding: 20px 0;
   box-shadow: 0 0 5px #AAA;
@@ -560,7 +563,7 @@ footer .theme-by {
     margin-bottom: 0;
   }
 }
-@media only screen and (max-width: 325px) {
+@media only screen and (max-width: 325px) { 
   .intro-header.big-img {
     height: 200px;
   }
@@ -596,7 +599,7 @@ footer .theme-by {
   font-weight: 800;
   letter-spacing: 1px;
   padding: 10px 5px;
-  background-color: #FFF;
+  background: #FFF;
   border-radius: 0;
   color: #404040;
 }
@@ -608,8 +611,8 @@ footer .theme-by {
 .pager li a:hover,
 .pager li a:focus {
   color: #FFF;
-  border: 1px solid {{ site.hover-col }};
-  background-color: {{ site.hover-col }};
+  background: #890000;
+  border: 1px solid #890000;
 }
 
 .pager {
@@ -668,49 +671,95 @@ pre {
   font-size: 16px;
   line-height: 1.5em;
 }
-.highlight pre {
-  border: none;
-  background: none;
-  margin: 0;
+pre code {
+  white-space: pre;
 }
-.highlight > pre {
-  background-image: linear-gradient(
-    rgba(0,0,0,0.06), rgba(0,0,0,0.06) 1.5em, rgba(0,0,0,0.03) 1.5em, rgba(0,0,0,0.03) 3em);
-  background-size: auto 3em;
-  background-position-y: 10px;
-  border: 1px solid rgba(0,0,0,0.1);
+pre.highlight, .highlight > pre, td.code pre {
+  background: #FAFAFA;
+  background-image: linear-gradient(#F9F9F9 50%, #FDFDFD 50%);
+  background-repeat: repeat;
+  background-size: 3em 3em;
+  background-position: 0px 10px;
   border-left: 7px solid #444;
 }
-.highlight > pre:not([class~="highlight"]) { /* code block with line number */
+code table, code table td, code table th, code table tbody, code table tr,
+td.gutter pre {
   padding: 0;
-}
-.highlight table, .highlight tr, .highlight td { /* to be removed after fixing table styles */
   border: none;
-  background: none;
+  background-color: #fff;
+}
+.highlight > pre {
   padding: 0;
-  margin: 0;
 }
-.highlight pre.lineno {
-  color: rgba(0,0,0,0.3);
+.highlight > pre.highlight {
+  padding: 9.5px;
+}
+td.code pre {
+  border-width: 0 0 0 2px;
+  border-style: solid;
+  border-color: #444;
   border-radius: 0;
-  border-right: 2px solid #444;
 }
-
-/* Make line numbers unselectable: excludes line numbers from copy-paste user ops */
-.lineno {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-.lineno::selection, .lineno::-moz-selection {
-  background: none;
+td.gutter {
+  padding-top: 3px;
 }
 
 /* --- Social media sharing section --- */
 
 #social-share-section {
   margin-bottom: 30px;
+}
+
+/* --- Typed.js --- */
+.typed-cursor {
+  opacity: 1;
+  font-weight: 100;
+  -webkit-animation: blink 0.7s infinite;
+  -moz-animation: blink 0.7s infinite;
+  -ms-animation: blink 0.7s infinite;
+  -o-animation: blink 0.7s infinite;
+  animation: blink 0.7s infinite;
+  }
+  @-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+  }
+  @-webkit-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+  }
+  @-moz-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+  }
+  @-ms-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+        }
+  @-o-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+
+@media screen and (max-width: 600px) {
+  .mobile-js-hide {
+    visibility: hidden;
+    clear: both;
+    float: left;
+    margin: 10px auto 5px 20px;
+    width: 28%;
+    display: none;
+  }
+}
+
+/* --- Custom: For Ads' alignment --- */
+.ads {
+  text-align: center;
 }
 
 /* --- Notification boxes --- */
@@ -752,7 +801,28 @@ pre {
   border: unset;
 }
 
-/* Fix .navbar-toggle */
+/* --- Custom: About me section --- */
+#aboutme-section {
+  font-size: 19px;
+}
+
+.about-text {
+  position: relative;
+  margin-left: 30px;
+}
+
+.about-icon {
+  font-size: 24px;
+  position: absolute;
+  left: -40px;
+  margin-top: 5px;
+}
+
+#aboutme-section p:last-child {
+  margin-bottom: 0;
+}
+
+/* fix .navbar-toggle */
 
 .navbar-default button.navbar-toggle:focus,
 .navbar-default button.navbar-toggle:hover {
